--- a/PinBall.html
+++ b/PinBall.html
@@ -30,7 +30,7 @@
                         <h1 style="color:aqua;">Pinball</h1>
                         <a type="button" href="#" class="text-info text-lg" id="toggleControlInfo" title="Toggle info"><i class="bi bi-info-circle" style="font-size:25px;"></i></a>
                     </div>
-                    <h5 class="text-secondary">Av:
+                    <h5 class="text-light">Av:
                         <span style="color:deepskyblue;">Asbjørn Bjørge</span>
                         ,
                         <span style="color:mediumspringgreen">Halil Ibrahim Keser</span>
