--- a/PinBall.html
+++ b/PinBall.html
@@ -33,7 +33,7 @@
                     <h5 class="text-light">Av:
                         <span style="color:deepskyblue;">Asbjørn Bjørge</span>
                         ,
-                        <span style="color:mediumspringgreen">Halil Ibrahim Keser</span>
+                        <span style="color:mediumspringgreen">Halil Keser</span>
                         &
                         <span style="color:hotpink">Nancy Lacsamana</span>
                     </h5>
@@ -41,14 +41,16 @@
                 <div class="card-body bg-secondary collapse show">
                     <h3>Kontroller</h3>
                     <ul style="color:yellow;">
-                        <li><h5>Zoom inn og ut, og roter brettet med mus.</h5></li>
-                        <li><h5>H for å slippe baller.</h5></li>
+                        <li><h6>Zoom inn og ut, og roter brettet med mus.</h6></li>
+                        <li><h6>H for å slippe baller.</h6></li>
+                        <li><h6>Space og Høyre-Alt for å slå ballen.</h6></li>
+                        <li><h6>Eller V B og N M</h6></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="col-2 mr-5">
+        <div class="col-3 mr-6">
             <div class="card mr-5 border border-warning">
                 <div class="card-header bg-secondary ">
                     <h1 class="text-center" style="color:purple;">Score</h1>
