--- a/PinBall.html
+++ b/PinBall.html
@@ -50,8 +50,8 @@
             </div>
         </div>
 
-        <div class="col-3 mr-6">
-            <div class="card mr-5 border border-warning">
+        <div class="col-3 mr-3">
+            <div class="card mr-3 border border-warning">
                 <div class="card-header bg-secondary ">
                     <h1 class="text-center" style="color:purple;">Score</h1>
                 </div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <!-- Hvis det trenges tidteller: fjern style=display:none -->
-            <div class="card mr-5 border border-warning" style="display:none">
+            <div class="card mr-3 border border-warning" >
                 <div class="card-header bg-secondary ">
                     <h1 class="text-center" style="color:greenyellow;">Timer</h1>
                 </div>
@@ -89,10 +89,10 @@
         $('.collapse').collapse('toggle');
     });
     /*****test av manipulering av tekst: sekundtelling*****/
-    /*setInterval(function(){
+    setInterval(function(){
         var count = parseInt($('#timeText').html()) +1  ;
         $('#timeText').html(count.toString());
-    }, 1000);*/
+    }, 1000);
 </script>
 </body>
 </html>
