Fjær må justeres men virker greit

--- a/PinBall.html
+++ b/PinBall.html
@@ -23,52 +23,54 @@
 <body>
 <div style="top:10px;width:100%; " class="ui">
     <div class="row d-flex justify-content-between">
-<!--        <div class="col-3 ml-5">-->
-<!--            <div class="card">-->
-<!--                <div class="card-header bg-dark">-->
-<!--                    <div class="px-3 row d-flex justify-content-between">-->
-<!--                        <h1 style="color:aqua;">Pinball</h1>-->
-<!--                        <a type="button" href="#" class="text-info text-lg" id="toggleControlInfo" title="Toggle info"><i class="bi bi-info-circle" style="font-size:25px;"></i></a>-->
-<!--                    </div>-->
-<!--                    <h5 class="text-light">Av:-->
-<!--                        <span style="color:deepskyblue;">Asbjørn Bjørge</span>-->
-<!--                        ,-->
-<!--                        <span style="color:mediumspringgreen">Halil Keser</span>-->
-<!--                        &-->
-<!--                        <span style="color:hotpink">Nancy Lacsamana</span>-->
-<!--                    </h5>-->
-<!--                </div>-->
-<!--                <div class="card-body bg-secondary collapse show">-->
-<!--                    <h3>Kontroller</h3>-->
-<!--                    <ul style="color:yellow;">-->
-<!--                        <li><h6>Zoom inn og ut, og roter brettet med mus.</h6></li>-->
-<!--                        <li><h6>H for å slippe baller.</h6></li>-->
-<!--                        <li><h6>Space og Høyre-Alt for å styre spakene.</h6></li>-->
-<!--                        <li><h6>Eller V B og N M</h6></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="col-3 ml-5">
+            <div class="card">
+                <div class="card-header bg-dark">
+                    <div class="px-3 row d-flex justify-content-between">
+                        <h1 style="color:aqua;">Pinball</h1>
+                        <a type="button" href="#" class="text-info text-lg" id="toggleControlInfo" title="Toggle info"><i class="bi bi-info-circle" style="font-size:25px;"></i></a>
+                    </div>
+                    <h5 class="text-light">Av:
+                        <span style="color:deepskyblue;">Asbjørn Bjørge</span>
+                        ,
+                        <span style="color:mediumspringgreen">Halil Keser</span>
+                        &
+                        <span style="color:hotpink">Nancy Lacsamana</span>
+                    </h5>
+                </div>
+                <div class="card-body bg-secondary collapse show">
+                    <h3>Kontroller</h3>
+                    <ul style="color:yellow;">
+                        <li><h6>Zoom inn og ut, og roter brettet med mus.</h6></li>
+                        <li><h6>H for å slippe baller.</h6></li>
+                        <li><h6>Space og Høyre-Alt for å styre spakene.</h6></li>
+                        <li><h6>Eller V B og N M</h6></li>
+                        <li><h6>+ for flere baller</h6></li>
+                        <li><h6>Hold ned X for å skyte</h6></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
-<!--        <div class="col-3 mr-3">-->
-<!--            <div class="card mr-3 border border-warning">-->
-<!--                <div class="card-header bg-secondary ">-->
-<!--                    <h1 class="text-center" style="color:purple;">Score</h1>-->
-<!--                </div>-->
-<!--                <div class="card-body bg-dark text-center p-4">-->
-<!--                    <h1 style="color:yellow; font-size:5rem;" id="scoreText">0</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            &lt;!&ndash; Hvis det trenges tidteller: fjern style=display:none &ndash;&gt;-->
-<!--            <div class="card mr-3 border border-warning" >-->
-<!--                <div class="card-header bg-secondary ">-->
-<!--                    <h1 class="text-center" style="color:greenyellow;">Timer</h1>-->
-<!--                </div>-->
-<!--                <div class="card-body bg-dark text-center p-4">-->
-<!--                    <h1 style="color:yellow; font-size:5rem;" id="timeText">0</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="col-3 mr-3">
+            <div class="card mr-3 border border-warning">
+                <div class="card-header bg-secondary ">
+                    <h1 class="text-center" style="color:purple;">Score</h1>
+                </div>
+                <div class="card-body bg-dark text-center p-4">
+                    <h1 style="color:yellow; font-size:5rem;" id="scoreText">0</h1>
+                </div>
+            </div>
+            <!-- Hvis det trenges tidteller: fjern style=display:none -->
+            <div class="card mr-3 border border-warning" >
+                <div class="card-header bg-secondary ">
+                    <h1 class="text-center" style="color:greenyellow;">Timer</h1>
+                </div>
+                <div class="card-body bg-dark text-center p-4">
+                    <h1 style="color:yellow; font-size:5rem;" id="timeText">0</h1>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src="/lib/ammo/ammo.js"></script>
