--- a/PinBall.html
+++ b/PinBall.html
@@ -46,7 +46,7 @@
                         <li><h6>Space og Høyre-Alt for å styre spakene.</h6></li>
                         <li><h6>Eller V B og N M</h6></li>
                         <li><h6>+ for flere baller</h6></li>
-                        <li><h6>Hold ned X for å skyte</h6></li>
+                        <li><h6>Hold ned X eller ENTER for å skyte</h6></li>
                     </ul>
                 </div>
             </div>
