--- a/PinBall.html
+++ b/PinBall.html
@@ -53,14 +53,14 @@
         </div>
 
         <div class="col-3 mr-3">
-            <div class="card mr-3 border border-warning">
-                <div class="card-header bg-secondary ">
-                    <h1 class="text-center" style="color:purple;">Score</h1>
-                </div>
-                <div class="card-body bg-dark text-center p-4">
-                    <h1 style="color:yellow; font-size:5rem;" id="scoreText">0</h1>
-                </div>
-            </div>
+<!--            <div class="card mr-3 border border-warning">-->
+<!--                <div class="card-header bg-secondary ">-->
+<!--                    <h1 class="text-center" style="color:purple;">Score</h1>-->
+<!--                </div>-->
+<!--                <div class="card-body bg-dark text-center p-4">-->
+<!--                    <h1 style="color:yellow; font-size:5rem;" id="scoreText">0</h1>-->
+<!--                </div>-->
+<!--            </div>-->
             <!-- Hvis det trenges tidteller: fjern style=display:none -->
             <div class="card mr-3 border border-warning" >
                 <div class="card-header bg-secondary ">
